# Diet-Health-Predictor

./: .env.example  .flake8  .gitignore  ARCHITECTURE.md  README.md  pyproject.toml
.github/workflows/: ci.yml
config/: settings.dev.yaml  settings.prod.yaml  settings.staging.yaml
data/raw/: healthy_diet_calorie_intake.csv
notebooks/: README.md
src/diet_health_predictor/: __init__.py  logging_config.py
src/diet_health_predictor/application/: __init__.py  data_drift.py  feature_engineering.py  model_evaluation.py  model_training.py  prediction.py  use_cases.py
src/diet_health_predictor/config/: __init__.py
src/diet_health_predictor/domain/: __init__.py
src/diet_health_predictor/infrastructure/: __init__.py  data_loader.py  drift.py  preprocessing.py
src/diet_health_predictor/presentation/: __init__.py  api_app.py  schemas.py
tests/: conftest.py
tests/fixtures/: README.md  mock_diet_data.csv
tests/integration/: test_api_app.py  test_data_drift_pipeline.py  test_health_diet_api.py  test_load_and_analyze_pipeline.py  test_model_evaluation_pipeline.py  test_model_training_pipeline.py  test_preprocessing_pipeline.py
tests/unit/application/: test_data_drift.py  test_model_evaluation.py  test_model_training.py  test_prediction.py  test_use_cases.py
tests/unit/config/: test_config.py
tests/unit/domain/: test_diet_assessment.py  test_nutrition_data.py  test_person.py
tests/unit/infrastructure/: test_data_loader.py  test_drift.py  test_models.py  test_preprocessing.py
