[tool.poetry]
name = "diet-health-predictor"
version = "0.1.0"
description = "A clean architecture data science package for diet and health prediction"
authors = ["Manda Surel <s239150.eps@gmail.com>"]
readme = "README.md"
packages = [{include = "diet_health_predictor", from = "src"}]

[tool.poetry.dependencies]
python = "^3.14"
pandas = "^2.0.0"
numpy = "^2.1.0"
pyyaml = "^6.0"
python-dotenv = "^1.0.0"
pydantic = "^2.0.0"
pydantic-settings = "^2.0.0"
scikit-learn = "^1.3.0"
joblib = "^1.3.0"
xgboost = "^3.0.0"
catboost = "^1.2.0"
scipy = "^1.14.0"
fastapi = ">=0.115"
uvicorn = {version = ">=0.30", extras = ["standard"]}

[tool.poetry.group.dev.dependencies]
pytest = "^7.0.0"
pytest-cov = "^4.0.0"
black = "^26.1.0"
isort = "^5.0.0"
flake8 = "^6.0.0"
mypy = "^1.0.0"
jupyter = "^1.0.0"
ipython = "^8.0.0"
httpx2 = ">=2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100
target-version = ['py314']

[tool.isort]
profile = "black"
line_length = 100

[tool.mypy]
python_version = "3.14"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false

# pandas/yaml/joblib/scikit-learn ship no inline types and no stub packages are
# pinned here; silence the resulting import-untyped noise instead of maintaining
# a stub-package tax on every dependency bump.
[[tool.mypy.overrides]]
module = ["pandas.*", "yaml.*", "joblib.*", "sklearn.*", "xgboost.*", "catboost.*", "scipy.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
minversion = "7.0"
testpaths = ["tests"]
addopts = "-ra --strict-markers --cov=diet_health_predictor --cov-report=term-missing"
markers = [
    "unit: fast, isolated tests with no real file/network I/O",
    "integration: tests exercising multiple layers together (real file I/O, scikit-learn, etc.)",
]

[tool.coverage.run]
source = ["src/diet_health_predictor"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.:",
]
